collapse button fixed

--- a/src/app/background-carousel/background-carousel.component.scss
+++ b/src/app/background-carousel/background-carousel.component.scss
@@ -1,25 +1,14 @@
 .img-fluid {
   height: 800px;
-  // height: auto;
   width: 100%;
   min-width: 400px;
 }
 
-// .background-carousel {
-//   left: -300px;
-// }
-
-.carousel-inner {
-  left: -10%;
-  right: 0;
-}
-
-// .carousel-item {
-//   background-image: url(/assets/images/jack1copy.png);
-// }
-
-// @media only screen and (min-width: 500px) {
-//   #img1 {
-//     content:url("assets/images/jack1copy_small.png");
+// @media only screen and (max-width: 500px) {
+//   .img-fluid {
+//     height: 800px;
+//     // height: auto;
+//     width: 200px;
+//     // min-width: 400px;
 //   }
 // }
